Generate user model, add authentication and authorization

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,12 @@
       .navbar-brand= link_to "MyBlog", root_path
       %ul.nav.navbar-nav.navbar-right
         %li= link_to "New Post", new_post_path
-        
+        %li= link_to "Sign out", destroy_user_session_path, method: :delete
+
+  - if notice
+    = notice
+  - if alert
+    = alert
+
   .container
     = yield
