--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,7 +1,10 @@
 .content
+  %small= @post.user.email
   %h1= @post.title
   %p= @post.body
   %br
   %small= link_to "Back", root_path
-  %small= link_to "Edit", edit_post_path(@post)
-  %small= link_to "Delete", @post, method: :delete, data: { confirm: "Are you sure?" }
+
+  - if current_user == @post.user
+    %small= link_to "Edit", edit_post_path(@post)
+    %small= link_to "Delete", @post, method: :delete, data: { confirm: "Are you sure?" }
