--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,24 @@
 
 @import "bootstrap-sprockets";
 // @import "bootstrap";
+
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+// Navigation
+nav {
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+  .navbar-brand {
+    a {
+      color: white;
+      text-transform: uppercase;
+      font-weight: bold;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+}
