--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,42 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// Variables
+$green: #18bc9c;
+$blue: #2c3e50;
+
+// Forms
+.form {
+  textarea {
+    max-width: 100%;
+  }
+}
+
+// Index page
+.post {
+  h2 {
+    font-weight: 800;
+    padding-left: 10px;
+    border-left: 4px solid $green;
+    a {
+      &:hover {
+        text-decoration: none;
+        opacity: 0.8;
+      }
+    }
+  }
+}
+
+
+// Posts show page
+.content {
+  h1 {
+    font-size: 2.6em;
+    font-weight: 800;
+    text-align: center;
+  }
+  hr {
+    border-top: 1px solid $blue;
+    width: 50%;
+  }
+  p {
+    font-size: 1.3em;
+  }
+}
